fix(discovery): remove hardcoded fake jobs, fix English preposition 'in' normalization false positives, and enforce location precedence