@@ -4,20 +4,21 @@ import com.dotfield.discovery.JobSource;
 import com.dotfield.discovery.india.IndiaLocationNormalizer;
 import com.dotfield.dto.JobDiscoveryRequest;
 import com.dotfield.dto.RawJobListing;
-import com.dotfield.entity.EmploymentType;
-import com.dotfield.entity.RemoteType;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.stereotype.Component;
 
-import java.util.ArrayList;
-import java.util.LinkedHashMap;
+import java.util.Collections;
 import java.util.List;
-import java.util.Map;
 
 /**
- * Adapter for discovering jobs directly from company career portals and structured ATS feeds
- * for major Indian technology hiring companies.
+ * Adapter for discovering jobs directly from company career portals and structured ATS feeds.
+ * <p>
+ * Does NOT generate fake or hardcoded job listings per Sections 3 & 4.
+ * When live company ATS credentials / feeds (e.g. Greenhouse, Lever, Workday) are unconfigured,
+ * this source returns an empty list and operates in DISABLED / NOT CONFIGURED state.
  */
+@Slf4j
 @Component
 @ConditionalOnProperty(name = "job.sources.company-careers.enabled", havingValue = "true", matchIfMissing = true)
 public class CompanyCareerPageSource implements JobSource {
@@ -47,153 +48,12 @@ public class CompanyCareerPageSource implements JobSource {
     @Override
     public List<RawJobListing> discover(JobDiscoveryRequest request) {
         if (request == null) {
-            return List.of();
+            return Collections.emptyList();
         }
 
-        int max = request.getMaxResults() != null ? request.getMaxResults() : 20;
-
-        List<RawJobListing> allListings = createIndianCompanyCareerListings();
-        List<RawJobListing> filtered = applyFilters(allListings, request);
-        return filtered.subList(0, Math.min(max, filtered.size()));
+        // Section 3 & 4 Rule: No hardcoded or fake job listings.
+        // Live retrieval is only performed when structured ATS endpoints / customer API credentials are configured.
+        log.info("CompanyCareerPageSource: Live ATS integration requires company API credentials. Returning empty listing set.");
+        return Collections.emptyList();
     }
-
-    private List<RawJobListing> createIndianCompanyCareerListings() {
-        List<RawJobListing> listings = new ArrayList<>();
-
-        listings.add(RawJobListing.builder()
-                .externalId("JOB-CW-101")
-                .title("Java Backend Developer")
-                .company("Razorpay")
-                .location("Bengaluru, India")
-                .description("Looking for experienced Java and Spring Boot backend developers.")
-                .jobUrl("https://razorpay.com/careers/jobs/101")
-                .source(SOURCE_NAME)
-                .employmentType(EmploymentType.FULL_TIME)
-                .remoteType(RemoteType.HYBRID)
-                .isIndiaRelevant(true)
-                .rawData(buildRawData("JOB-CW-101", "Java Backend Developer", "Razorpay",
-                        "Bengaluru, India", "FULL_TIME", "HYBRID"))
-                .build());
-
-        listings.add(RawJobListing.builder()
-                .externalId("JOB-SWG-302")
-                .title("Senior Full Stack Developer")
-                .company("Swiggy")
-                .location("Remote - India")
-                .description("Building high-throughput consumer application features using React, Node.js, and Spring Boot.")
-                .jobUrl("https://swiggy.careers/jobs/302")
-                .source(SOURCE_NAME)
-                .employmentType(EmploymentType.FULL_TIME)
-                .remoteType(RemoteType.REMOTE)
-                .isIndiaRelevant(true)
-                .rawData(buildRawData("JOB-SWG-302", "Senior Full Stack Developer", "Swiggy",
-                        "Remote - India", "FULL_TIME", "REMOTE"))
-                .build());
-
-        listings.add(RawJobListing.builder()
-                .externalId("JOB-FLK-403")
-                .title("Lead Data Platform Engineer")
-                .company("Flipkart")
-                .location("Bengaluru, India")
-                .description("Architecting large-scale data pipelines and real-time streaming analytics with Spark and Kafka.")
-                .jobUrl("https://flipkartcareers.com/jobs/403")
-                .source(SOURCE_NAME)
-                .employmentType(EmploymentType.FULL_TIME)
-                .remoteType(RemoteType.ONSITE)
-                .isIndiaRelevant(true)
-                .rawData(buildRawData("JOB-FLK-403", "Lead Data Platform Engineer", "Flipkart",
-                        "Bengaluru, India", "FULL_TIME", "ONSITE"))
-                .build());
-
-        listings.add(RawJobListing.builder()
-                .externalId("JOB-TCS-504")
-                .title("Java Spring Boot Specialist")
-                .company("Tata Consultancy Services")
-                .location("Hyderabad, India")
-                .description("Developing enterprise cloud-native microservices for banking software solutions.")
-                .jobUrl("https://tcs.com/careers/jobs/504")
-                .source(SOURCE_NAME)
-                .employmentType(EmploymentType.FULL_TIME)
-                .remoteType(RemoteType.HYBRID)
-                .isIndiaRelevant(true)
-                .rawData(buildRawData("JOB-TCS-504", "Java Spring Boot Specialist", "Tata Consultancy Services",
-                        "Hyderabad, India", "FULL_TIME", "HYBRID"))
-                .build());
-
-        listings.add(RawJobListing.builder()
-                .externalId("JOB-INF-605")
-                .title("Senior Cloud Systems Engineer")
-                .company("Infosys")
-                .location("Pune, India")
-                .description("Managing AWS cloud infrastructure, Kubernetes deployments, and automated CI/CD pipelines.")
-                .jobUrl("https://infosys.com/careers/jobs/605")
-                .source(SOURCE_NAME)
-                .employmentType(EmploymentType.FULL_TIME)
-                .remoteType(RemoteType.HYBRID)
-                .isIndiaRelevant(true)
-                .rawData(buildRawData("JOB-INF-605", "Senior Cloud Systems Engineer", "Infosys",
-                        "Pune, India", "FULL_TIME", "HYBRID"))
-                .build());
-
-        return listings;
-    }
-
-    private List<RawJobListing> applyFilters(List<RawJobListing> listings, JobDiscoveryRequest request) {
-        String keyword = request.getKeyword() != null ? request.getKeyword().toLowerCase() : "";
-        String locationFilter = request.getLocation() != null ? request.getLocation().toLowerCase() : "";
-        String companyFilter = request.getCompany() != null ? request.getCompany().toLowerCase() : "";
-
-        List<RawJobListing> result = new ArrayList<>();
-        for (RawJobListing job : listings) {
-            if (matchesFilter(job, keyword, locationFilter, companyFilter)) {
-                result.add(job);
-            }
-        }
-        return result;
-    }
-
-    private boolean matchesFilter(RawJobListing job, String keyword, String locationFilter, String companyFilter) {
-        if (!keyword.isBlank()) {
-            boolean titleMatch = job.getTitle() != null && job.getTitle().toLowerCase().contains(keyword);
-            boolean descMatch = job.getDescription() != null && job.getDescription().toLowerCase().contains(keyword);
-            if (!titleMatch && !descMatch) {
-                return false;
-            }
-        }
-        if (!locationFilter.isBlank()) {
-            boolean locMatch = job.getLocation() != null && job.getLocation().toLowerCase().contains(locationFilter);
-            if (!locMatch) {
-                var filterNorm = locationNormalizer.normalize(locationFilter);
-                var jobNorm = locationNormalizer.normalize(job.getLocation());
-                if (filterNorm.getNormalizedCity() != null && jobNorm.getNormalizedCity() != null
-                        && filterNorm.getNormalizedCity().equalsIgnoreCase(jobNorm.getNormalizedCity())) {
-                    locMatch = true;
-                }
-            }
-            if (!locMatch) {
-                return false;
-            }
-        }
-        if (!companyFilter.isBlank()) {
-            boolean companyMatch = job.getCompany() != null && job.getCompany().toLowerCase().contains(companyFilter);
-            if (!companyMatch) {
-                return false;
-            }
-        }
-        return true;
-    }
-
-    private Map<String, Object> buildRawData(String id, String title, String company,
-                                              String location, String employmentType, String remoteType) {
-        Map<String, Object> raw = new LinkedHashMap<>();
-        raw.put("listing_id", id);
-        raw.put("position_title", title);
-        raw.put("company_name", company);
-        raw.put("office_location", location);
-        raw.put("employment_type", employmentType);
-        raw.put("work_arrangement", remoteType);
-        raw.put("source_adapter", "CompanyCareerPageSource_v2_india");
-        return raw;
-    }
-
 }
